aoc-derive/tests/ui/aoc.stderr
error: cannot parse day (between 1 and 25) 30
 --> tests/ui/aoc.rs:3:7
  |
3 | #[aoc(day30, part1)]
  |       ^^^^^

error: cannot parse part (1 or 2) 3
 --> tests/ui/aoc.rs:8:14
  |
8 | #[aoc(day10, part3)]
  |              ^^^^^

error: AOC part cannot return ()
  --> tests/ui/aoc.rs:14:1
   |
14 | fn day1_part1() {}
   | ^^^^^^^^^^^^^^^
