aoc-derive/tests/ui/aoc.rs
use aoc_derive::aoc;

#[aoc(day30, part1)]
fn day30part1() -> u32 {
    0
}

#[aoc(day10, part3)]
fn day10part3() -> u32 {
    0
}

#[aoc(day1, part1)]
fn day1_part1() {}

fn main() {}
